--- a/BookShelf/Views/Books/Details.cshtml
+++ b/BookShelf/Views/Books/Details.cshtml
@@ -47,12 +47,13 @@
         <dd class="col-sm-10">
             @foreach (var comment in Model.Comments)
             {
-                @Html.DisplayFor(modelItem => comment.Text) 
+            <li>@Html.DisplayFor(modelItem => comment.Text) </li>
             }
         </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-controller= "Comments" asp-action="Create" asp-route-id="@Model.Id">Add a Comment</a> |
     <a asp-action="Index">Back to List</a>
 </div>
